<resources>

    <string name="app_name">Cyventure</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_id">1443309129239838</string>
    <string name="get_started">To get started, log in using Facebook</string>
    <string name="settings">Logout</string>
    <string name="greeting_no_user">Please select a user via the options menu</string>
    <string name="empty_slot">Empty Slot</string>
    <string name="menu_item_switch_user">Select User</string>
    <string name="menu_item_clear_slot">Clear this slot</string>
    <string name="greeting_format">Hello, %s!</string>
    <string name="action_people">With whom?</string>
	<string name="action_people_default">Select friends</string>
	<string name="error_dialog_title">Error</string>
	<string name="error_dialog_button_text">OK</string>
	<string name="single_user_selected">%1$s</string>
	<string name="two_users_selected">%1$s and %2$s</string>
	<string name="multiple_users_selected">%1$s and %2$s others</string>
	<string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="action_websearch">Web search</string>
    <string name="view_game">View Game</string>
    <string name="join_game">Join Game</string>
    <string name="create_game">Create Game</string>
    <string name="cyventure">Cyventure</string>
    <string name="gotogame">Go To Game</string>
    <string name="login">Cyventure</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    
    
    
    <string name="game_name_create_game">Game Name</string>
    <string name="num_of_clues_create_game">Number of Clues</string>
    <string name="one_create_game">1</string>
    <string name="note_create_game">Notes</string>
    <string name="create_button_create_game">Create</string>
    <string name="open_game_create_game">Open Game</string>
    <string name="cancel_button">Cancel</string>
    
    <string name="back_button">Back</string>

</resources>