<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >
	    <com.facebook.widget.ProfilePictureView
	            android:id="@+id/selection_profile_pic"
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:layout_gravity="center"
	            android:gravity="center_horizontal"
	            facebook:preset_size="small" />
	    <TextView
	            android:id="@+id/selection_user_name"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            android:layout_gravity="center"
	            android:textColor="#333"
	            android:textSize="18sp" />
	</LinearLayout>
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cyventure"
        android:textSize="50sp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:text="@string/view_game" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:text="@string/join_game" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:text="@string/create_game" />
    <Button 
        android:id="@+id/mapShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Show Map"/>

</LinearLayout>
